# Laboratorio5-Robotica

./: CI_Trayectorias_Phantom_Lab.mlx  CV2  CV2.py  README.md  phantomHMI.py
workspace/src/dynamixel_one_motor/: CMakeLists.txt
workspace/src/dynamixel_one_motor/launch/: px_controllers.launch
workspace/src/dynamixel_one_motor/scripts/: jointPub.py  jointSrv.py  jointSub.py
workspace/src/dynamixel_one_motor/scripts/anexos/: trayF1.csv  trayF2.csv  trayG1.csv  trayG2.csv  trayH1.csv  trayH21.csv  trayH22.csv  trayH23.csv  trayHome.csv  trayN1.csv  trayN2.csv  trayWI1.csv  trayWI2.csv  trayWO1.csv  trayWO2.csv
